--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "mysql2": "^3.3.0",
-    "nookies": "^2.5.2",
+    "dotenv": "^17.2.3",
+    "mysql2": "^3.15.3",
     "next": "14.0.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
