--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "dotenv": "^17.2.3",
     "mysql2": "^3.15.3",
     "next": "14.0.0",
+    "nodemailer": "^8.0.1",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^7.0.9"
   }
 }
